algoritmo pari o dispari completo (da pulire e riordinare)

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <div class="output"></div>
+    <br>
+    <br>
+    <hr>
+    <button id="button-pari">PARI</button>
+    <button id="button-dispari">DISPARI</button>
     <script src="./js/script.js"></script>
 </body>
 </html>
