--- a/index.html
+++ b/index.html
@@ -4,15 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 <body>
-    <div class="output"></div>
+    <h1 class="title">Palindromi</h1>
+    <div class="output1"></div>
     <br>
     <br>
     <hr>
-    <button id="button-pari">PARI</button>
-    <button id="button-dispari">DISPARI</button>
+    <h1 class="title">Pari o Dispari</h1>
+    <div class="container">
+        <div class="output2"></div>
+        <div class="row">
+            <button id="button-pari">PARI</button>
+            <button id="button-dispari">DISPARI</button>
+        </div>
+        <div id="sore"></div>
+    </div>
     <script src="./js/script.js"></script>
 </body>
 </html>
