--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <button id="button-pari">PARI</button>
             <button id="button-dispari">DISPARI</button>
         </div>
-        <div id="sore"></div>
+        <div id="score"></div>
     </div>
     <script src="./js/script.js"></script>
 </body>
